@@ -1,6 +1,7 @@
 v4.19.14 ??? January 2019
   - Added SIP_NULLPTR to the public API.
   - Added support for size_t.
+  - Added sipLong_AsSizeT() to the C API.
   - Bug fixes.
 
 v4.19.13 1st October 2018
